@@ -1,5 +1,5 @@
 var firebug = {
-  version:[1.23,20090212],
+  version:[1.23,20090214],
   el:{}, 
   env:{ 
     "cache":{},
@@ -12,6 +12,7 @@ var firebug = {
     "hideDOMFunctions":false,
     "init":false, 
     "isPopup":false,
+    "liteFilename":"firebug-lite.js",
     "minimized":false,
     "override":false,
     "ml":false,
@@ -353,7 +354,7 @@ var firebug = {
       }
     },
     newWindow: function() {
-      var interval,scripts,script;
+      var interval,scripts,script,scriptPath;
 
       if (!firebug.env.popupWin) {
         scripts = document.getElementsByTagName('script');
@@ -363,49 +364,60 @@ var firebug = {
           alert("Firebug Lite could not open a pop-up window, most likely because of a popup blocker.\nPlease enable popups for this domain");
         } else {
           for (i=0,len=scripts.length; i<len; i++) {
-            if (scripts[i].src.indexOf('firebug-lite') > -1) {
-              var scriptPath = scripts[i].src;
+            if (scripts[i].src.indexOf(firebug.env.liteFilename) > -1) {
+              scriptPath = scripts[i].src;
               break;
             }
           }
 
-          script = firebug.env.popupWin.document.createElement('script'), done = false;
-          script.type = 'text/javascript';
-          script.src = scriptPath;
+          if (scriptPath) {
+            script = firebug.env.popupWin.document.createElement('script'), done = false;
+            script.type = 'text/javascript';
+            script.src = scriptPath;
 
-          script[firebug.lib.env.ie?"onreadystatechange":"onload"] = function(){
-            if(!done && (!firebug.lib.env.ie || this.readyState == "complete" || this.readyState=="loaded")){
-              done = true;
-              with(firebug.env.popupWin.firebug) {
-                env.isPopup = true;
-                env.css = firebug.env.css;
-                init();
-                el.button.dock.environment.addStyle({ "display": "block"});
-                el.button.newWindow.environment.addStyle({ "display": "none"});
-              }
-            }
-          };
-
-          if (!done && firebug.lib.env.webkit) {
-            firebug.env.popupWin.document.write('<html><head></head><body></body></html>');
-            interval = setInterval(function() {
-              if (firebug.env.popupWin.firebug) {
-                clearInterval(interval);
+            script[firebug.lib.env.ie?"onreadystatechange":"onload"] = function(){
+              if(!done && (!firebug.lib.env.ie || this.readyState == "complete" || this.readyState=="loaded")){
                 done = true;
-                with(firebug.env.popupWin.firebug) {
-                  env.isPopup = true;
-                  env.css = firebug.env.css;
-                  init();
-                  el.button.dock.environment.addStyle({ "display": "block"});
-                  el.button.newWindow.environment.addStyle({ "display": "none"});
+                if(firebug.env.popupWin.firebug) {
+                  with(firebug.env.popupWin.firebug) {
+                    env.isPopup = true;
+                    env.css = firebug.env.css;
+                    init();
+                    el.button.dock.environment.addStyle({ "display": "block"});
+                    el.button.newWindow.environment.addStyle({ "display": "none"});
+                  }
                 }
               }
-            }, 10);
-          };
+            };
 
-          firebug.env.popupWin.document.getElementsByTagName('head')[0].appendChild(script);
-          firebug.el.main.environment.addStyle({"display": "none"});
-          firebug.el.mainiframe.environment.addStyle({"display": "none"});
+            if (!done && firebug.lib.env.webkit) {
+              firebug.env.popupWin.document.write('<html><head></head><body></body></html>');
+              interval = setInterval(function() {
+                if (firebug.env.popupWin.firebug) {
+                  clearInterval(interval);
+                  done = true;
+                  with(firebug.env.popupWin.firebug) {
+                    env.isPopup = true;
+                    env.css = firebug.env.css;
+                    init();
+                    el.button.dock.environment.addStyle({ "display": "block"});
+                    el.button.newWindow.environment.addStyle({ "display": "none"});
+                  }
+                }
+              }, 10);
+            };
+
+            if (!done) {
+              firebug.env.popupWin.document.getElementsByTagName('head')[0].appendChild(script);
+              firebug.el.main.environment.addStyle({"display": "none"});
+              firebug.el.mainiframe.environment.addStyle({"display": "none"});
+            }
+          } else {
+            alert("Unable to detect the following script \"" + firebug.env.liteFilename +
+                  "\" ... if the script has been renamed then please set the value of firebug.env.liteFilename to reflect this change");
+            firebug.env.popupWin.close();
+            firebug.env.popupWin=null;
+          }
         }
       }
     },
